# netty

./: .gitignore  README.md  _typos.toml  default_settings.example.yaml  project.config.yaml  pyproject.toml
collections/devicetypes/Cisco/: C9300-24P.yaml  C9300-48P.yaml
collections/devicetypes/Fortinet/: FortiGate 100F.yaml  FortiGate 200F.yaml  FortiGate 400F.yaml  FortiGate 40F.yaml  FortiGate 60F.yaml  FortiGate 80F.yaml  FortiGate 90G.yaml
collections/devicetypes/HPE/: AP-365.yaml  AP-505.yaml  AP-535.yaml  AP-555.yaml  Aruba 7010.yaml  Aruba 7030.yaml  Aruba 7205.yaml  Aruba 7210.yaml  Aruba 7220.yaml  Aruba 7240.yaml  Aruba 7280.yaml  Aruba-7010.yaml  Aruba-7030.yaml  Aruba-7205.yaml  Aruba-7210.yaml  Aruba-7220.yaml  Aruba-7240.yaml  Aruba-7280.yaml  Aruba-AP-365.yaml  Aruba-AP-505.yaml  Aruba-AP-535.yaml  Aruba-AP-555.yaml
collections/devicetypes/Huawei/: S5732-H48XUM2CC.yaml  S6730-H24X6C.yaml  S6730-H28Y4C.yaml  S6730-H48X6C.yaml  S6730-S24X6Q.yaml
collections/devicetypes/Ruijie/: RG-S5310-24GT4XS-P-E  RG-S5310-24GT4XS-P-E.yaml  RG-S5310-24GT4XS.yaml  RG-S5310-48GT4XS-P-E  RG-S5310-48GT4XS-P-E.yaml  RG-S5310-48GT4XS.yaml  RG-S5760C-48SFP4XS-X.yaml  RG-S6150-48VS8CQ-X.yaml
src/netty/: __init__.py  _types.py  consts.py  gen.py  logger.py  main.py
src/netty/arch/: __init__.py  device_role.py  device_type.py  platform.py
src/netty/cli/: cli.py  default.py  subnetter.py  xlsx_helper.py
src/netty/confgen/: dispatcher.py  gen.py  utils.py
src/netty/confgen/factory/: firewall_factory.py  switch_factory.py
src/netty/genconf/: dispatcher.py  gen.py  utils.py
src/netty/gentopo/: diagram.py  gen.py  topogen.py
src/netty/project/: __init__.py  config.py  file_parser.py
src/netty/topogen/: diagram.py  gen.py
src/netty/utils/: file.py  ip.py  mac.py  net.py  netif.py  random_factory.py  time.py
src/netty/web/: routers.py
src/netty/ztp/: confpush.py
src/tests/: test_diag.py  test_drawio.py  test_utils.py
(+43 files in other folders)
